# zero-to-prod

./: Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20201228170747_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
